@@ -22,86 +22,86 @@
 ## MA 02111-1307, USA
 
 businessDay <- function(calendar="TARGET", dates=Sys.Date()) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_isBusinessDay", calendar, dates, PACKAGE="RQuantLib")
-  val <- as.logical(val)
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_isBusinessDay", calendar, dates, PACKAGE="RQuantLib")
+    val <- as.logical(val)
+    names(val) <- dates
+    val
 }
 
 isHoliday <- function(calendar="TARGET", dates=Sys.Date()) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_isHoliday", calendar, dates, PACKAGE="RQuantLib")
-  val <- as.logical(val)
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_isHoliday", calendar, dates, PACKAGE="RQuantLib")
+    val <- as.logical(val)
+    names(val) <- dates
+    val
 }
 
 isWeekend <- function(calendar="TARGET", dates=Sys.Date()) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_isWeekend", calendar, dates, PACKAGE="RQuantLib")
-  val <- as.logical(val)
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_isWeekend", calendar, dates, PACKAGE="RQuantLib")
+    val <- as.logical(val)
+    names(val) <- dates
+    val
 }
 
 isEndOfMonth <- function(calendar="TARGET", dates=Sys.Date()) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_isEndOfMonth", calendar, dates, PACKAGE="RQuantLib")
-  val <- as.logical(val)
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_isEndOfMonth", calendar, dates, PACKAGE="RQuantLib")
+    val <- as.logical(val)
+    names(val) <- dates
+    val
 }
 
 endOfMonth <- function(calendar="TARGET", dates=Sys.Date()) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_endOfMonth", calendar, dates, PACKAGE="RQuantLib")
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_endOfMonth", calendar, dates, PACKAGE="RQuantLib")
+    names(val) <- dates
+    val
 }
 
 adjust <- function(calendar="TARGET", dates=Sys.Date(), bdc = 0 ) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  val <- .Call("QL_adjust", calendar, as.double(bdc), dates, PACKAGE="RQuantLib")
-  names(val) <- dates
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    val <- .Call("QL_adjust", calendar, as.double(bdc), dates, PACKAGE="RQuantLib")
+    names(val) <- dates
+    val
 }
 
 advance <- function(calendar="TARGET", dates=Sys.Date(),
                     n, timeUnit, # call 1
                     period,      # call 2
                     bdc = 0, emr = 0) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(dates)=="Date")
-  call1 <- missing(period) & !missing(n) & !missing(timeUnit)  ## or was it && ?
-  call2 <- !missing(period) & missing(n) & missing(timeUnit)
-  stopifnot(call1 | call2)
-  val <- NULL
-  if (call1)
-    val <- .Call("QL_advance1",
-                 calendar,
-                 list(amount = as.double(n),
-                      unit = as.double(timeUnit),
-                      bdc = as.double(bdc),
-                      emr = as.double(emr)),
-                 dates,
-                 PACKAGE="RQuantLib")
-  if (call2)
-    val <- .Call("QL_advance2",
-                 calendar,
-                 list(period = as.double(period),
-                      bdc = as.double(bdc),
-                      emr = as.double(emr)),
-                 dates,
-                 PACKAGE="RQuantLib")
-  stopifnot( !is.null(val) )
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(dates)=="Date")
+    call1 <- missing(period) & !missing(n) & !missing(timeUnit)  ## or was it && ?
+    call2 <- !missing(period) & missing(n) & missing(timeUnit)
+    stopifnot(call1 | call2)
+    val <- NULL
+    if (call1)
+        val <- .Call("QL_advance1",
+                     calendar,
+                     list(amount = as.double(n),
+                          unit = as.double(timeUnit),
+                          bdc = as.double(bdc),
+                          emr = as.double(emr)),
+                     dates,
+                     PACKAGE="RQuantLib")
+    if (call2)
+        val <- .Call("QL_advance2",
+                     calendar,
+                     list(period = as.double(period),
+                          bdc = as.double(bdc),
+                          emr = as.double(emr)),
+                     dates,
+                     PACKAGE="RQuantLib")
+    stopifnot( !is.null(val) )
+    val
 }
 
 businessDaysBetween  <- function(calendar="TARGET",
@@ -110,29 +110,39 @@ businessDaysBetween  <- function(calendar="TARGET",
                                  includeFirst = 1,
                                  includeLast = 0
                                  ) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(from)=="Date")
-  stopifnot(class(to)=="Date")
-  val <- .Call("QL_businessDaysBetween",
-               calendar,
-               list(includeFirst = as.double(includeFirst),
-                    includeLast = as.double(includeLast)),
-               from, to,
-               PACKAGE="RQuantLib")
-  val <- val
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(from)=="Date")
+    stopifnot(class(to)=="Date")
+    val <- .Call("QL_businessDaysBetween",
+                 calendar,
+                 list(includeFirst = as.double(includeFirst),
+                      includeLast = as.double(includeLast)),
+                 from, to,
+                 PACKAGE="RQuantLib")
+    val <- val
+    val
 }
 
 holidayList <- function(calendar="TARGET",
                         from=Sys.Date(),
                         to=Sys.Date() + 5,
                         includeWeekends=0) {
-  stopifnot(is.character(calendar))
-  stopifnot(class(from)=="Date")
-  stopifnot(class(to)=="Date")
-  val <- .Call("QL_holidayList",
-               calendar,
-               list(includeWeekends=as.double(includeWeekends), from=from, to=to),
-               PACKAGE="RQuantLib")
-  val
+    stopifnot(is.character(calendar))
+    stopifnot(class(from)=="Date")
+    stopifnot(class(to)=="Date")
+    val <- .Call("QL_holidayList",
+                 calendar,
+                 list(includeWeekends=as.double(includeWeekends), from=from, to=to),
+                 PACKAGE="RQuantLib")
+    val
+}
+
+setCalendarContext <- function(calendar="TARGET",
+                               fixingDays = 2,
+                               settleDate = Sys.Date() + 2) {
+    val <- .Call("QL_setContext",
+                 list(calendar = calendar,
+                      fixingDays = fixingDays,
+                      settleDate = settleDate),
+                 PACKAGE="RQuantLib")
 }
